# radbot

./: .dockerignore  .env.docker  .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.worker  Makefile  README.md  SPEC.md  TASKS.md  a2as.yaml  agent.py  code_eval.md  config.example  conftest.py  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml  pytest.ini
.claude/skills/e2e-test/: SKILL.md  cost-analysis-guide.md  doc-update-guide.md  log-analysis-guide.md  performance-review-guide.md  test-coverage-guide.md
.claude/skills/e2e-test-research/: SKILL.md  research-guide.md
.claude/skills/ship/: SKILL.md
.claude/skills/telos-review/: SKILL.md
.claude/skills/test-authoring/: SKILL.md
.github/actions/bootstrap-radbot-stack/: action.yml
.github/workflows/: dev-deploy.yml  docker-build-worker.yml  docker-build.yml  quality-pipeline.yml
config/: mcp_proxy.yaml.example  specialized_agents.yaml
docker/: config.yaml  init-e2e-db.sh
docs/: implementation_docs_cleanup_plan.md
docs/guides/: README.md  adding-admin-panel.md  adding-agent.md  adding-api-route.md  adding-integration.md  adding-tool-module.md  maintaining-agents.md  maintaining-db.md  maintaining-frontend.md  maintaining-integrations.md
docs/implementation/: agent_specialization.md  ci-security.md  dev_environment_setup.md  e2e_tests.md  index.md  mcp_bridge.md  ollama_support.md  quality_pipeline.md  ship_skill.md  telos.md  yaml_config_guide.md  yaml_config_mcp_integration.md
docs/implementation/components/: agent_framework.md  index.md  scheduler.md  tts.md  web_ui.md  webhooks.md
docs/plans/: ha_alias_learning.md  index.md
examples/: config.dev.yaml.example  config.yaml.example  crawl4ai_agent_example.py
radbot/: __init__.py  __main__.py  logging_config.py
radbot/agent/: __init__.py  agent.py  agent_base.py  agent_core.py  agent_factory.py  agent_initializer.py  agent_methods.py  agent_tools_setup.py  agent_utils.py  agents.py  calendar_agent_factory.py  enhanced_memory_agent_factory.py  factory_utils.py  home_assistant_agent_factory.py  memory_agent_factory.py  runner.py  shared.py  shell_agent_factory.py  specialized_agent_factory.py  todo_agent_factory.py
radbot/cache/: __init__.py  cache_telemetry.py  prompt_cache.py
radbot/callbacks/: __init__.py  empty_content_callback.py  filter_tool_events.py  sanitize_callback.py  sanitize_tool_schemas.py  scope_to_current_turn.py  telemetry_callback.py  terse_protocol.py  tool_call_repair_callback.py
radbot/cli/: main.py
radbot/config/: __init__.py  adk_config.py  cache_settings.py  config_loader.py  schema_models.py  settings.py
radbot/credentials/: __init__.py  crypto.py  store.py
radbot/db/: __init__.py  connection.py
radbot/filesystem/: __init__.py  adapter.py  integration.py  security.py  tools.py
radbot/mcp_server/: __init__.py  __main__.py  auth.py  http_transport.py  server.py
radbot/memory/: __init__.py  embedding.py  qdrant_memory.py
radbot/services/: __init__.py  session_naming.py
radbot/telemetry/: __init__.py  db.py  usage_tracker.py
radbot/tools/: __init__.py  agent_tools.py  agent_transfer.py  claude_prompt.py  repo_exploration.py
radbot/utils/: __init__.py
radbot/web/: __init__.py  __main__.py  app.py
radbot/worker/: __init__.py  __main__.py  db.py  history_loader.py  idle_watchdog.py  nomad_template.py  terminal_handler.py
scripts/: _admin_client.py  e2e_seed_manifest.yml  gh_token.py  migrate_credentials_to_dev.py  migrate_todo_to_telos.py  migrate_yaml_to_db.py  mutation-summary.py  seed_config_from_env.py  seed_credentials_from_env.py  seed_docker_credentials.py  visual_regression_compare.py  wait_for_health.py
specs/: agents.md  config.md  deployment.md  integrations.md  storage.md  testing.md  tools.md  web.md  workers.md
task-api/app/: main.py
tests/: conftest.py
tests/e2e/: __init__.py  cassettes.py  conftest.py  test_admin_api.py  test_agent_chat.py  test_agent_info_api.py  test_agent_routing.py  test_alerts_api.py  test_concurrent_sessions.py  test_events_api.py  test_health.py  test_integration_calendar.py  test_integration_gmail.py  test_integration_ha.py  test_integration_jira.py  test_integration_lidarr.py  test_integration_nomad.py  test_integration_overseerr.py  test_integration_picnic.py  test_memory_api.py  test_messages_api.py  test_reminders_agent.py  test_reminders_api.py  test_scheduler_agent.py  test_scheduler_api.py  test_session_worker.py  test_sessions_api.py  test_stt.py  test_tasks_agent.py  test_tasks_api.py  test_terminal_api.py  test_terminal_session.py  test_terminal_worker.py  test_tts.py  test_webhooks_agent.py  test_webhooks_api.py  test_websocket_basic.py
tests/filesystem/: test_integration.py  test_security.py  test_tools.py
tests/integration/: test_divergent_ideation_live.py  test_home_assistant_integration.py
tests/schema/: __main__.py  extract.py  lint.py  test_extract.py  test_lint.py
tests/tools/: test_shell_command.py
tests/unit/: test_agent_config_integration.py  test_agent_model_config.py  test_basic_tools.py  test_cassettes.py  test_config_manager.py  test_crawl4ai_integration.py  test_divergent_ideation.py  test_enhanced_memory.py  test_factory_utils.py  test_ha_dashboard_tools.py  test_ha_websocket_client.py  test_heartbeat_digest.py  test_lidarr_client.py  test_lidarr_tools.py  test_mcp_server_auth.py  test_mcp_setup_endpoint.py  test_mcp_tools.py  test_mcp_utils.py  test_mcp_wiki_sanitization.py  test_memory.py  test_memory_consolidation.py  test_memory_tools.py  test_picnic_client.py  test_picnic_tools.py  test_prompt_cache.py  test_sanitize.py  test_sanitize_callback.py  test_scheduler_defaults.py  test_scheduler_engine.py  test_semantic_distiller.py  test_session_naming.py  test_session_tools.py  test_shared_utils.py  test_telemetry_service.py  test_telos.py  test_terse_after_model_callback.py  test_worker_components.py
tools/: agent_inspection.json  migrate_env_to_yaml.py  test_config_env.py  test_direct_mcp_sdk.py  test_mcp_proxy.py  test_mcp_sse_client.py  test_mcp_standard_client.py  test_new_mcp_client.py
(+429 files in other folders)
