[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radbot"
version = "0.1.0"
authors = [
    {name = "Perry Manuk", email = "perry.manuk@example.com"},
]
description = "A modular AI agent framework using Google ADK, Qdrant, MCP, and A2A"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "google-adk>=2.0.0a3,<3.0.0",
    "google-genai>=1.68.0",
    "qdrant-client>=1.13.0",
    "modelcontextprotocol>=0.1.0",
    "tzdata",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "nest-asyncio>=1.6.0",  # Required for MCP fileserver to work in running event loops
    "requests>=2.31.0",
    "websockets>=12.0.0",   # Required for Home Assistant WebSocket client
    "httpx>=0.27.0",        # HTTP client for async requests
    "psycopg2-binary>=2.9.9",  # Required for PostgreSQL database connections
    "google-api-python-client>=2.102.0", # Required for Google Calendar API
    "google-auth-httplib2>=0.1.0",      # Required for Google Calendar API authentication
    "google-auth-oauthlib>=1.1.0",      # Required for Google Calendar OAuth flow
    "python-jsonrpc>=0.10.0",          # Required for Context7 MCP stdio client
    "apscheduler>=3.10.0",             # Required for cron/scheduling engine
    "google-cloud-texttospeech>=2.14.0",  # Required for TTS synthesis
    "atlassian-python-api>=3.41.0",        # Required for Jira Cloud integration
    "cryptography>=42.0.0",                # Required for credential store encryption
    "python-picnic-api2>=1.3.0",           # Required for Picnic grocery delivery integration
    "PyJWT[crypto]>=2.8.0",                   # Required for GitHub App JWT generation (RS256)
    "a2a-sdk>=0.2.0",                     # Required for A2A (Agent-to-Agent) protocol support
    # Removed gcsa due to dependency conflict with ADK (tzlocal version conflict)
    "youtube-transcript-api>=1.2.4",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
    "mypy>=1.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
]

web = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "jinja2>=3.1.4",
    "starlette>=0.36.0",
    "python-multipart>=0.0.9",
]

[project.urls]
"Homepage" = "https://github.com/perrymanuk/radbot"
"Bug Tracker" = "https://github.com/perrymanuk/radbot/issues"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
# This codebase predates strict type-checking. The settings below let mypy
# act as a guard against catastrophic-only issues (broken imports, undefined
# names) without flagging the hundreds of pre-existing untyped functions and
# Optional-default annotations. Tighten incrementally per-module via
# [[tool.mypy.overrides]] as code is hardened.
ignore_missing_imports = true
follow_imports = "silent"
no_implicit_optional = false
disable_error_code = [
    "no-any-return",
    "truthy-function",
    "arg-type",
    "assignment",
    "var-annotated",
    "attr-defined",
    "import-untyped",
    "import-not-found",
    "operator",
    "union-attr",
    "return-value",
    "return",
    "func-returns-value",
    "call-arg",
    "call-overload",
    "index",
    "misc",
    "valid-type",
    "annotation-unchecked",
    "list-item",
    "dict-item",
    "name-defined",
    "no-redef",
    "override",
    "unused-coroutine",
]
exclude = [
    "radbot/web/frontend/",
    "build/",
    "dist/",
    ".venv/",
    "node_modules/",
    ".claude/worktrees/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tools", "examples", ".git", ".venv", "node_modules", "build", "dist"]
collect_ignore_glob = ["tools/*", "examples/*"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring a running dev instance",
    "slow: tests that take >10s (Gemini API calls)",
    "requires_gemini: requires Google Gemini API key",
    "requires_ha: requires Home Assistant connectivity",
    "requires_calendar: requires Google Calendar OAuth",
    "requires_gmail: requires Gmail OAuth",
    "requires_jira: requires Jira Cloud connectivity",
    "requires_overseerr: requires Overseerr connectivity",
    "requires_picnic: requires Picnic API credentials",
    "requires_tts: requires Google Cloud TTS",
    "requires_stt: requires Google Cloud STT",
    "mcp_compat: mark test as needing special MCP compatibility handling",
    "requires_nomad: requires Nomad HTTP API connectivity",
    "requires_github: requires GitHub App connectivity",
    "requires_ntfy: requires ntfy.sh connectivity",
    "requires_claude_code: requires Claude Code CLI and OAuth token",
    "writes_external: mutates external systems (skipped without --run-writes)",
]
filterwarnings = [
    "ignore::pytest.PytestUnknownMarkWarning",
]
